<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    tools:context=".ui.LoginActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:ems="10"
        android:hint="@string/login_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textViewForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_forget_password"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    <Button
        android:id="@+id/buttonInto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_into"
        android:bottomRightRadius="50dp"
        android:bottomLeftRadius="50dp"
        android:topLeftRadius="50dp"
        android:topRightRadius="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_into_disabled"
        android:textColor="@color/colorWhite"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgetPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_no_account" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/login_register" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_load"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>